--- a/2019.html
+++ b/2019.html
@@ -49,8 +49,8 @@
                 <a href="https://www.behance.net/gallery/119793203/2017-2021-PORTFOLIO-" target="_blank" class="icon"><img src="images/icon_behance.png" alt=""></a>
             </div>
             <div class="back_to_portfolio">
-                <a href="index.html#portfolio">
-                    <p>Back to Home</p>
+                <a href="#">
+                    <p>Back to Top</p>
                 </a>
             </div>
         </div>
