--- a/2018.html
+++ b/2018.html
@@ -22,6 +22,7 @@
                     <a href="#" class="btn-close">
                         <i class="fas fa-times"></i>
                     </a>
+                    <li><a href="collection.html">Best Collection</a></li>
                     <li><a href="202021.html">2020-2021</a></li>
                     <li><a href="2019.html">2019</a></li>
                     <li><a href="2018.html">2018</a></li>
@@ -54,6 +55,7 @@
             </a>
         </div>
         <ul class="footer_menu">
+            <li><a href="collection.html">Best Collection</a></li>
             <li><a href="202021.html">2020-2021</a></li>
             <li><a href="2019.html">2019</a></li>
             <li><a href="2018.html">2018</a></li>
