--- a/collection.html
+++ b/collection.html
@@ -32,6 +32,7 @@
     </header>
     <main>
         <div class="container portfolio-inner">
+            <h1> Best Collection</h1>
             <div class="content" onselectstart="return false;" ondragstart="return false;" oncontextmenu="return false;" oncopy="return false;">
                 <img src="images/best/01maggie 35.jpg" alt="">
                 <img src="images/best/02Taiwan Tatler.jpg" alt="">
